--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "ts-loader": "^9.2.4",
         "typescript": "^4.3.5",
         "uid-safe": "^2.1.4",
+        "vanta": "^0.5.22",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
