--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.0",
         "concurrently": "^5.3.0",
+        "contentful": "^9.1.32",
         "cookie-session": "^2.0.0-rc.1",
         "crypto-random-string": "^3.0.1",
         "css-loader": "^5.0.1",
@@ -44,6 +45,7 @@
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
+        "react-scroll-motion": "^0.3.0",
         "react-test-renderer": "^17.0.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
